test(s3k): retire unreachable CNZ miniboss trace assertion
Changelog: n/a

Guide: n/a

Known-Discrepancies: n/a

S3K-Known-Discrepancies: n/a

Agent-Docs: n/a

Configuration-Docs: n/a

Skills: n/a